<resources>
    <string name="app_name">Skeddly</string>
    <string name="app_name_lower">skeddly</string>

    <string name="activity_signup_btn_account_create">Create account</string>
    <string name="activity_signup_hint_email">Email</string>
    <string name="activity_signup_hint_full_name">Full name</string>
    <string name="activity_signup_hint_phone_number">Phone Number</string>

    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_confirm">Confirm</string>

    <string name="dialog_contents">Description</string>
    <string name="dialog_qr_btn_export">Export</string>
    <string name="dialog_qr_title">QR Code</string>
    <string name="dialog_title">Title</string>
    <string name="dialog_draw">Draw Participants</string>
    <string name="dialog_draw_hint"># Participants</string>
    <string name="dialog_image_title">Uploaded Image</string>

    <string name="dialog_firebase_emu_title">Setup Firebase Emulator</string>
    <string name="dialog_firebase_emu_contents">
        Enter the IP Address of the Firebase Emulator to use.
        The default is 10.0.2.2. If the box is left blank, the default will be used.
        Your emulator must use the ports:\n\n
        Authentication: 9099\n
        Functions: 5001\n
        Firestore: 8080\n
        Storage: 9199
    </string>

    <string name="dialog_user_demotion_title">Confirm Demotion</string>
    <string name="dialog_user_demotion_contents">
        Demoting this user to ENTRANT will delete all their associated events. This action cannot be undone. Are you sure?
    </string>

    <string name="dialog_msg_send_all_title">Send Message</string>
    <string name="dialog_msg_send_all_contents">Enter the message to send to all participants on the %s</string>
    <string name="dialog_msg_send_all_waiting_list">waiting list.</string>
    <string name="dialog_msg_send_all_final_list">final list. You can select a specific status to send to as well.</string>

    <string name="dialog_event_join_confirm_contents">
        Users will be drawn randomly to attend the event. You will receive a notification if you are selected to confirm your attendance.
        \n\nThe organizer has left the below criteria.
        \n\n%s
        \n\nYour location %s be logged when you join this event.
    </string>

    <string name="dialog_event_join_confirm_title">Entry Criteria</string>
    <string name="dialog_event_join_location_not_required">will not</string>
    <string name="dialog_event_join_location_required">will</string>

    <string name="event_attendee_limit">0/25</string>
    <string name="event_btn_draw">Draw</string>
    <string name="event_btn_edit">Edit</string>
    <string name="event_btn_join">Join</string>
    <string name="event_btn_leave">Leave</string>
    <string name="event_btn_joining">Joining…</string>
    <string name="event_btn_participants">Participants</string>
    <string name="event_btn_view_info">View Info</string>
    <string name="event_category">Social</string>
    <string name="event_date_time">Monday, Wednesday 9:30–10:00</string>
    <string name="event_description">A casual get-together for all members.</string>
    <string name="event_history">Event History</string>
    <string name="event_label_attendee_limit">Attendee Limit:</string>
    <string name="event_label_category">Category:</string>
    <string name="event_label_description">Description:</string>
    <string name="event_label_geo_location_req">Geo-location requirement:</string>
    <string name="event_label_information">Information:</string>
    <string name="event_label_title">Event title:</string>
    <string name="event_label_wait_list_limit">Wait-list limit:</string>
    <string name="event_label_wait_list_max">Max waiting list size:</string>
    <string name="event_name">Event 1</string>
    <string name="event_title">Community Meetup</string>
    <string name="event_location">Location</string>
    <string name="event_wait_list_limit">37/100</string>

    <string name="fragment_admin_user_view_switch">Organizers Only</string>

    <string name="fragment_create_edit_checkbox_geo_location_req">Log Entrant Join Location</string>
    <string name="fragment_create_edit_date"><u>month. day, year</u></string>
    <string name="fragment_create_edit_date_sep">-</string>
    <string name="fragment_create_edit_hint_attendee_limit">Enter Limit</string>
    <string name="fragment_create_edit_hint_category_select">Categories</string>
    <string name="fragment_create_edit_hint_day_select">Day of the Week</string>
    <string name="fragment_create_edit_hint_event_desc">Enter Event Description</string>
    <string name="fragment_create_edit_hint_event_title">Enter Event Title</string>
    <string name="fragment_create_edit_hint_lottery_selection_criteria">Enter Criteria</string>
    <string name="fragment_create_edit_hint_wait_list_limit">OPTIONAL</string>
    <string name="fragment_create_edit_label_lottery_selection_criteria">Lottery Selection Criteria:</string>
    <string name="fragment_create_edit_label_event_period">Event Period:</string>
    <string name="fragment_create_edit_label_reg_period">Registration Period:</string>
    <string name="fragment_create_edit_switch_recurring">Recurring</string>
    <string name="fragment_create_edit_time"><u>hh:mm</u></string>
    <string name="fragment_create_edit_next">Next</string>
    <string name="fragment_create_edit_previous">Previous</string>
    <string name="fragment_create_edit_mode_c">Create Event</string>
    <string name="fragment_create_edit_mode_e">Edit Event</string>

    <string name="fragment_event_history_btn_all">All</string>
    <string name="fragment_event_history_btn_closed">Closed</string>
    <string name="fragment_event_history_btn_ended">Ended</string>
    <string name="fragment_event_history_btn_ongoing">Ongoing</string>

    <string name="fragment_home_search_hint">Search Events</string>

    <string name="fragment_inbox_btn_all">All</string>
    <string name="fragment_inbox_btn_messages">Messages</string>
    <string name="fragment_inbox_btn_registration">Registration</string>
    <string name="fragment_inbox_btn_system">System</string>

    <string name="fragment_participant_list_btn_final_list">Final List</string>
    <string name="fragment_participant_list_btn_waiting_list">Waiting List</string>
    <string name="fragment_participant_list_title">Participants</string>

    <string name="fragment_personal_info_edit_email_prompt">Email:</string>
    <string name="fragment_personal_info_edit_full_name_prompt">Full name:</string>
    <string name="fragment_personal_info_edit_password_confirm_hint">Confirm new password</string>
    <string name="fragment_personal_info_edit_password_new_hint">Enter new password</string>
    <string name="fragment_personal_info_edit_password_prompt">Change password:</string>
    <string name="fragment_personal_info_edit_phone_number_prompt">Phone number:</string>

    <string name="fragment_profile_delete_account">Delete Account</string>
    <string name="fragment_profile_email">doejane@loremipsum.com</string>
    <string name="fragment_profile_name">Jane Doe</string>
    <string name="fragment_profile_notification_settings">Notification Settings</string>
    <string name="fragment_profile_personal_info">Personal Information</string>
    <string name="fragment_profile_phone_number">123-456-7890</string>
    <string name="fragment_profile_popup_delete_content">Are you sure you want to delete your account?</string>

    <string name="fragment_settings_notifications_lottery_status">Lottery Status Notifications</string>
    <string name="fragment_settings_notifications_event_update">Event Update Notifications</string>
    <string name="fragment_settings_notification_administrative">Administrative Notifications</string>

    <string name="nav_create">Create</string>
    <string name="nav_event_info">Event Info</string>
    <string name="nav_home">Home</string>
    <string name="nav_inbox">Inbox</string>
    <string name="nav_my_events">My Events</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_notif_settings">Notification Settings</string>

    <string name="notification_content">Notification information, here is information about the notification yuppers</string>
    <string name="notification_title">Notification</string>
    <string name="dialog_draw_content">Participants on waiting list: %d\nCurrent # of Participants: %d/%s\n\nHow many participants do you want to draw?</string>
    <string name="selected_images_count">%d selected images</string>
    <string name="admin_notification_logs">Admin Notification Logs</string>
    <string name="my_events">My Events</string>
    <string name="placeholder">Placeholder</string>
    <string name="fragment_profile_event_history_joined_date">Joined: %s</string>
    <string name="message">Message</string>
    <string name="send">Send</string>

    <string name="toast_file_csv_exported">CSV file has been exported!</string>
    <string name="event_reg_end">Registration End:</string>
</resources>
