<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/inbox"
        android:title="@string/nav_inbox" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/create"
        android:title="@string/nav_create" />

    <item
        android:id="@+id/navigation_tools"
        android:icon="@drawable/tools"
        android:title="@string/nav_tools" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/nav_profile" />

</menu>
