<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_main_organizer"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.skeddly.ui.HomeFragment"
        android:label="@string/nav_home">
    <action
        android:id="@+id/action_navigation_home_to_event_view_info"
        app:destination="@id/navigation_event_view_info"
        />
    <action
        android:id="@+id/action_navigation_home_to_edit_event"
        app:destination="@id/navigation_create"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_inbox"
        android:name="com.example.skeddly.ui.InboxFragment"
        android:label="@string/nav_inbox"
        />

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.example.skeddly.ui.CreateFragment"
        android:label="@string/nav_create">
        <action
            android:id="@+id/action_navigation_create_to_home"
            app:destination="@id/navigation_home" />
    </fragment>


    <fragment
        android:id="@+id/navigation_my_events"
        android:name="com.example.skeddly.ui.MyEventsFragment"
        android:label="@string/nav_my_events"
        />

    <fragment
        android:id="@+id/navigation_event_view_info"
        android:name="com.example.skeddly.ui.EventViewInfoFragment"
        android:label="@string/nav_event_info">
        <action
            android:id="@+id/action_event_view_info_to_participant_list"
            app:destination="@id/navigation_participant_list" />

        <action
            android:id="@+id/action_navigation_event_view_info_to_edit_event"
            app:destination="@id/navigation_create"/>

        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.skeddly.ui.ProfileFragment"
        android:label="@string/nav_profile"
        />

    <fragment
        android:id="@+id/navigation_participant_list"
        android:name="com.example.skeddly.ui.ParticipantListFragment"
        android:label="Participation List"
        />


</navigation>
