<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/entrant_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.skeddly.ui.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/home_fragment" >

        <action
            android:id="@+id/action_navigation_home_to_event_view_info"
            app:destination="@id/event_view_info" />
    </fragment>

    <fragment
        android:id="@+id/navigation_inbox"
        android:name="com.example.skeddly.ui.InboxFragment"
        android:label="@string/nav_inbox" />

    <fragment
        android:id="@+id/event_view_info"
        android:name="com.example.skeddly.ui.EventViewInfoFragment"
        android:label="@string/nav_event_info">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.skeddly.ui.ProfileFragment"
        android:label="@string/nav_profile" />

</navigation>
