<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_main_entrant"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.skeddly.ui.HomeFragment"
        android:label="@string/nav_home">

        <action
            android:id="@+id/action_navigation_home_to_event_view_info"
            app:destination="@id/navigation_event_view_info"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_inbox"
        android:name="com.example.skeddly.ui.InboxFragment"
        android:label="@string/nav_inbox" />

    <fragment
        android:id="@+id/navigation_event_view_info"
        android:name="com.example.skeddly.ui.EventViewInfoFragment"
        android:label="@string/nav_event_info">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.skeddly.ui.ProfileFragment"
        android:label="@string/nav_profile"
        />

</navigation>
