<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:background="@drawable/bg_header_profile">

    <TextView
        android:id="@+id/title_inbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/nav_inbox"
        android:textColor="@color/neutral_lighter_off_white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_inbox">

        <Button
            android:id="@+id/btn_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gradient_navy_blue"
            android:fontFamily="@font/inter_medium"
            android:padding="0dp"
            android:text="@string/fragment_inbox_btn_all"
            android:textAllCaps="false"
            android:textColor="@color/neutral_lighter_off_white"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_messages"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:layout_weight="1"
            android:background="@drawable/btn_unselect"
            android:fontFamily="@font/inter_medium"
            android:padding="0dp"
            android:text="@string/fragment_inbox_btn_messages"
            android:textAllCaps="false"
            android:textColor="@color/primary_light_blue"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_registration"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:layout_weight="1"
            android:background="@drawable/btn_unselect"
            android:fontFamily="@font/inter_medium"
            android:padding="0dp"
            android:text="@string/fragment_inbox_btn_registration"
            android:textAllCaps="false"
            android:textColor="@color/primary_light_blue"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_system"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:layout_weight="1"
            android:background="@drawable/btn_unselect"
            android:fontFamily="@font/inter_medium"
            android:padding="0dp"
            android:text="@string/fragment_inbox_btn_system"
            android:textAllCaps="false"
            android:textColor="@color/primary_light_blue"
            android:textSize="13sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
