<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="34dp">

    <!-- Profile Image Placeholder -->
    <ImageView
        android:id="@+id/img_profile_placeholder"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/img_style_round"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Full name Input -->
    <EditText
        android:id="@+id/text_sign_up_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:background="@drawable/bg_form_field"
        android:hint="@string/activity_signup_hint_full_name"
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        android:paddingVertical="17dp"
        android:shadowColor="@color/neutral_black"
        android:shadowDy="4"
        android:textColor="@color/neutral_brown_light"
        android:textColorHint="@color/neutral_brown_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_profile_placeholder" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/text_sign_up_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_form_field"
        android:hint="@string/activity_signup_hint_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:paddingVertical="17dp"
        android:textColor="@color/neutral_brown_light"
        android:textColorHint="@color/neutral_brown_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_sign_up_full_name" />

    <!-- Username Input -->
    <EditText
        android:id="@+id/text_sign_up_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_form_field"
        android:hint="@string/activity_signup_hint_phone_number"
        android:inputType="phone"
        android:paddingHorizontal="16dp"
        android:paddingVertical="17dp"
        android:textColor="@color/neutral_brown_light"
        android:textColorHint="@color/neutral_brown_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_sign_up_email" />

    <!-- Create Account Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_account_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@drawable/gradient_purple"
        android:paddingVertical="16dp"
        android:text="@string/activity_signup_btn_account_create"
        android:textAllCaps="false"
        android:textColor="@color/neutral_lighter_off_white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_sign_up_phone_number" />

</androidx.constraintlayout.widget.ConstraintLayout>
